Fixed responsive bug overlap sensors svg and classrooms

--- a/electronautes/style/style.css
+++ b/electronautes/style/style.css
@@ -1031,9 +1031,13 @@ and (max-width : 480px) {
 
 
 object {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
+}
+
+object#img-sensors {
+    position: absolute;
 }
 
 
